// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'(1) #if' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
{#if condition}
  <div
    class="lorem ipsum dolor sit amet consectetur adipiscing
      elit proin ex massa hendrerit eu posuere eu volutpat
      id neque pellentesque"
  ></div>
{:else if condition}
  <div
    class="lorem ipsum dolor sit amet consectetur adipiscing
      elit proin ex massa hendrerit eu posuere eu volutpat
      id neque pellentesque"
  ></div>
{:else}
  <div
    class="lorem ipsum dolor sit amet consectetur adipiscing
      elit proin ex massa hendrerit eu posuere eu volutpat
      id neque pellentesque"
  ></div>
{/if}
"
`;

exports[`'(2) #each' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
{#each items as item}
  <div
    class="lorem ipsum dolor sit amet consectetur adipiscing
      elit proin ex massa hendrerit eu posuere eu volutpat
      id neque pellentesque"
  ></div>
{:else}
  <div
    class="lorem ipsum dolor sit amet consectetur adipiscing
      elit proin ex massa hendrerit eu posuere eu volutpat
      id neque pellentesque"
  ></div>
{/each}

{#each items as item, index (key)}
  <div
    class="lorem ipsum dolor sit amet consectetur adipiscing
      elit proin ex massa hendrerit eu posuere eu volutpat
      id neque pellentesque"
  ></div>
{/each}

{#each items as { id, ...rest }}
  <div
    class="lorem ipsum dolor sit amet consectetur adipiscing
      elit proin ex massa hendrerit eu posuere eu volutpat
      id neque pellentesque"
  ></div>
{/each}

{#each items as [id, ...rest]}
  <div
    class="lorem ipsum dolor sit amet consectetur adipiscing
      elit proin ex massa hendrerit eu posuere eu volutpat
      id neque pellentesque"
  ></div>
{/each}
"
`;

exports[`'(2-1) #each - This test works on pret…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
{#each { length: 8 }, index}
  <div
    class="lorem ipsum dolor sit amet consectetur adipiscing
      elit proin ex massa hendrerit eu posuere eu volutpat
      id neque pellentesque"
  ></div>
{/each}
"
`;

exports[`'(3) #key' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
{#key value}
  <div
    class="lorem ipsum dolor sit amet consectetur adipiscing
      elit proin ex massa hendrerit eu posuere eu volutpat
      id neque pellentesque"
  ></div>
{/key}
"
`;

exports[`'(4) #await' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
{#await expression}
  <div
    class="lorem ipsum dolor sit amet consectetur adipiscing
      elit proin ex massa hendrerit eu posuere eu volutpat
      id neque pellentesque"
  ></div>
{:then name}
  <div
    class="lorem ipsum dolor sit amet consectetur adipiscing
      elit proin ex massa hendrerit eu posuere eu volutpat
      id neque pellentesque"
  ></div>
{:catch name}
  <div
    class="lorem ipsum dolor sit amet consectetur adipiscing
      elit proin ex massa hendrerit eu posuere eu volutpat
      id neque pellentesque"
  ></div>
{/await}

{#await expression then name}
  <div
    class="lorem ipsum dolor sit amet consectetur adipiscing
      elit proin ex massa hendrerit eu posuere eu volutpat
      id neque pellentesque"
  ></div>
{/await}

{#await expression catch name}
  <div
    class="lorem ipsum dolor sit amet consectetur adipiscing
      elit proin ex massa hendrerit eu posuere eu volutpat
      id neque pellentesque"
  ></div>
{/await}
"
`;

exports[`'(5) #snippet - This test works on pre…' > expectation 1`] = `
"<!-- ------------------------------------------------------| printWidth=60 (in snapshot) -->
{#snippet foo()}
  <div
    class="lorem ipsum dolor sit amet consectetur adipiscing
      elit proin ex massa hendrerit eu posuere eu volutpat
      id neque pellentesque"
  ></div>
{/snippet}

{#snippet bar(param1, param2, paramN)}
  <div
    class="lorem ipsum dolor sit amet consectetur adipiscing
      elit proin ex massa hendrerit eu posuere eu volutpat
      id neque pellentesque"
  ></div>
{/snippet}
"
`;
